--- a/index/homepage.css
+++ b/index/homepage.css
@@ -1,23 +1,40 @@
 
-	div {
+
+body{
+	background-color: rgba(127, 255, 212,0.1);
+}
+	div.contanier_login, div.contanier_register {
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		width: 100%;
-		height: 50%;
-		border: solid black 2px;
+		width: 50%;
+		height: 40%;
+		border-style: solid;
+		border-color: black;
+		border-width: thin;
 		border-radius: 5px;
+		margin:auto;
+		margin-top: 50px;
 	}
-	.contanier_login{
-		background-color: green;
+	div.contanier_login{
+		background-image: url("assets/login_img.jpg");
+		background-repeat: no-repeat;
+		background-size: cover;
 	}
-	.contanier_register{
-		background-color: green;
+	div.contanier_register{
+		background-image: url("assets/reg_img.jpg");
+		background-repeat: no-repeat;
+		background-size: cover;
+	}
+	div.separator{
+		height: 1%;
+		width: 100%;
+		color: trasparent;
 	}
 	button {
-		height:20px;
-		width:100px;
-		color: white;
-		text-shadow: 0 0 3px black, 0 0 5px #0000FF;
-		border-radius: 10px;
+		background-color: rgba(255, 255, 255, 0.5);
+		height:20%;
+		width:35%;
+		color: black;
+		border-radius: 100px;
 	}
