--- a/index/index.css
+++ b/index/index.css
@@ -1,7 +1,7 @@
 
 
 body{
-	background-color: rgba(79, 79, 79,1);
+	background-color:black;
 }
 	div.contanier_login, div.contanier_register {
 		display: flex;
@@ -10,19 +10,19 @@ body{
 		width: 50%;
 		height: 40%;
 		border-style: solid;
-		border-color: black;
-		border-width: thin;
+		border-color: white;
+		border-width:thick;
 		border-radius: 5px;
 		margin:auto;
 		margin-top: 50px;
 	}
 	div.contanier_login{
-		background-image: url("assets/login_img.jpg");
+		background-image: url("assets_index/login_img.jpg");
 		background-repeat: no-repeat;
 		background-size: cover;
 	}
 	div.contanier_register{
-		background-image: url("assets/reg_img.jpg");
+		background-image: url("assets_index/reg_img.jpg");
 		background-repeat: no-repeat;
 		background-size: cover;
 	}
