--- a/index/index.css
+++ b/index/index.css
@@ -1,7 +1,7 @@
 
 
 body{
-	background-color:black;
+	background-image:linear-gradient(#bdc3c7 , #2c3e50);
 }
 	div.contanier_login, div.contanier_register {
 		display: flex;
@@ -37,4 +37,6 @@ body{
 		width:35%;
 		color: black;
 		border-radius: 100px;
+		border-width: thick;
+		border-color: white;
 	}
