--- a/index/index.css
+++ b/index/index.css
@@ -1,6 +1,10 @@
 
-
-body{
+	h1{
+	font-family: serif;
+	font-size: 4vw;
+	color: grey;
+}
+	body{
 	background-image:linear-gradient(#bdc3c7 , #2c3e50);
 }
 	div.contanier_login, div.contanier_register {
@@ -11,10 +15,10 @@ body{
 		height: 40%;
 		border-style: solid;
 		border-color: white;
-		border-width:thick;
+		border-width: thick;
 		border-radius: 5px;
 		margin:auto;
-		margin-top: 50px;
+		margin-top: 30px;
 	}
 	div.contanier_login{
 		background-image: url("assets_index/login_img.jpg");
@@ -26,10 +30,18 @@ body{
 		background-repeat: no-repeat;
 		background-size: cover;
 	}
-	div.separator{
+	.separator{
 		height: 1%;
 		width: 100%;
 		color: trasparent;
+	}
+	div.header{
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 100%;
+		height: 10%;
+		margin-bottom: 20px;
 	}
 	button {
 		background-color: rgba(255, 255, 255, 0.5);
@@ -39,4 +51,7 @@ body{
 		border-radius: 100px;
 		border-width: thick;
 		border-color: white;
+	}
+	button:hover {
+		background-color: rgba(128, 128, 128, 0.7);
 	}
